--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <title>Fuel Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    <script src="script.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
