--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="input-group mb-3 border rounded shadow">
-                                <input type="number" id="hrs_dur" v-on:change="calcDuration(); calcFuel()" min="0" class="form-control  input-input text-end border-0">
+                                <input type="number" id="hrs_dur" onchange="calcDuration(); calcFuel()" min="0" class="form-control  input-input text-end border-0">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text input-span border-0">hrs</span>
                                 </div>
@@ -29,7 +29,7 @@
                         </div>
                         <div class="col">
                             <div class="input-group mb-3 border rounded shadow">
-                                <input type="number" id="min_dur" v-on:change="calcDuration(); calcFuel()" min="0" step="1" class="form-control  input-input text-end border-0">
+                                <input type="number" id="min_dur" onchange="calcDuration(); calcFuel()" min="0" step="1" class="form-control  input-input text-end border-0">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text input-span border-0">min</span>
                                 </div>
@@ -41,7 +41,7 @@
             <div class="my-4">
                 <h5 class="subheadline">Lap Time</h5>
                 <div class="input-group mb-3 border rounded shadow">
-                    <input type="number" id="lap_time" v-on:change="calcLaptime(); calcFuel()" class=" input-input form-control text-end border-0" min="0">
+                    <input type="number" id="lap_time" onchange="calcLaptime(); calcFuel()" class=" input-input form-control text-end border-0" min="0">
                     <div class="input-group-prepend">
                             <span class="input-group-text input-span border-0">MM.ss</span>
                     </div>
@@ -50,7 +50,7 @@
             <div class="my-4">
                 <h5 class="subheadline">Lap Consumption</h5>   
                 <div class="input-group mb-3 border rounded shadow">
-                    <input type="number" id="lap_cons" v-on:change="calcFuel()" class=" input-input form-control text-end border-0" min="0">
+                    <input type="number" id="lap_cons" onchange="calcFuel()" class=" input-input form-control text-end border-0" min="0">
                     <div class="input-group-prepend">
                             <span class="input-group-text input-span border-0">liters</span>
                     </div>
@@ -69,9 +69,6 @@
     </div>
     <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-            
-          </a>
           <span class="mb-3 mb-md-0 text-muted">All rights reserved © 2024 Feverest</span>
         </div>
       </div>
