--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <span class="mb-3 mb-md-0 text-muted">All rights reserved © 2024 Feverest</span>
+        <div class="d-flex justify-content-end py-3 my-4 div-footer">
+            <span class="mb-3 mb-md-0 text-muted">All rights reserved © 2024 Feverest</span>
         </div>
-      </div>
+    </div>
+
 </body>
