--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <title>Fuel Calculator</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="media/calculator.png">
     <script src="assets/js/script.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,6 +48,11 @@
                     </div>
                 </div>
             </div>
+            <!-- new function in progress
+            <div class="my-4">
+                <h5 class="subheadline">Lap Time</h5>
+            </div>
+            -->
             <div class="my-4">
                 <h5 class="subheadline">Lap Consumption</h5>   
                 <div class="input-group mb-3 border rounded shadow">
@@ -66,7 +72,13 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-end py-3 my-4 div-footer">
+        <div class="d-flex justify-content-between align-items-center my-4 div-footer">
+            <div>
+                <img src="media/TC_Logo_1024x1024_round.png" height="32px">
+                <a href="https://github.com/Feverest-org/fuelcalculator">
+                    <img src="media/github-mark.png" height="32px">
+                </a>
+            </div>            
             <span class="mb-3 mb-md-0 text-muted">All rights reserved © 2024 Feverest</span>
         </div>
     </div>
