added function to clear input on headline

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="container d-flex flex-column align-items-center">
         <div class="div-width div-padding my-5 py-4 rounded shadow-lg">
             <div class="d-flex justify-content-between">
-                <h1>Fuel Calculator</h1>
+                <a onclick="clearInput()">
+                    <h1 class="headline">Fuel Calculator</h1>
+                </a>
             </div>
             <hr/>   
             <div class="my-4">
