--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="my-4">
                 <h5 class="subheadline">Lap Time</h5>
                 <div class="input-group mb-3 border rounded shadow">
-                    <input type="number" id="lap_time" onkeyup="calcLaptime(); calcFuel()" class=" input-input form-control text-end border-0" min="0">
+                    <input type="number" id="lap_time" onkeyup="calcLaptime(); calcFuel()" class="input-input form-control text-end border-0" min="0">
                     <div class="input-group-prepend">
                             <span class="input-group-text input-span border-0">MM.ss</span>
                     </div>
@@ -77,7 +77,7 @@
         <div class="d-flex justify-content-between align-items-center my-4 div-footer">
             <div>
                 <img src="media/TC_Logo_1024x1024_round.png" height="32px">
-                <a href="https://github.com/Feverest-org/fuelcalculator">
+                <a href="https://github.com/Feverest-org/fuelcalculator" target="_blank">
                     <img src="media/github-mark.png" height="32px">
                 </a>
             </div>            
